infrastructure/controllers/zion/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "cloudflare-clusterissuer"
    # Optionally: Dashboard middleware to secure your dashboard
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-dashboard-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.milanchis.com
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 80
  tls:
  - hosts:
    - traefik.milanchis.com
    # secretName: traefik-dashboard-certificate-secret
